sass/style.scss
////////////////////////////////////////////////////////////////////////////////
// General
////////////////////////////////////////////////////////////////////////////////
body {
	font-family: 'Josefin Sans', sans-serif;
	font-weight: 200;
	font-size: 10pt;
	color: rgba(#4a4a4a, 1);
}

a {
	color: rgba(#85BB50, 1);
	font-weight: 400;
	padding: 2px 5px;
	border-radius: 3px;
}

a:hover {
	text-decoration: none;
	color: rgba(#fff, 1);
	background-color: rgba(#85BB50, 1);
}

img {max-width: 100%;}

.wrapper {
	max-width: 1000px;
	padding: 0 20px;
	margin: 0 auto;
}

::selection{
	color:#fff;
	background-color:rgba(#85BB50, 1);
}

////////////////////////////////////////////////////////////////////////////////
// Utility calsses
////////////////////////////////////////////////////////////////////////////////
.hide {display: none;}

.vhide {
	position: fixed;
	top: -20px;
	left: -20px;
	width: 0;
	height: 0;
	overflow: hidden;
}

////////////////////////////////////////////////////////////////////////////////
// h1
////////////////////////////////////////////////////////////////////////////////
h1 {
	padding: 30px 0;
	font-size: 4.2em;
	font-family: 'Sacramento', cursive;
	font-weight: normal;
	text-align: center;
	text-shadow: 0 2px 2px rgba(#4a4a4a, 0.5);
}

h1 a,
h1 a:hover {
	color: rgba(#4a4a4a, 1);
	background-color: transparent;
}

////////////////////////////////////////////////////////////////////////////////
// .menu
////////////////////////////////////////////////////////////////////////////////
.mainMenu .menu {
	margin-bottom: 30px;
}

.mainMenu .menu a {
	display: block;
	padding: 10px;
	font-family: 'Amatic SC', cursive;
	font-size: 1.8em;
	font-weight: normal;
	text-align: center;
	color: rgba(#4a4a4a, 1);
}

.mainMenu .menu a:hover {background-color: rgba(#4a4a4a, 0.1);}

.mainMenu .menu .active {
	font-weight: bold;
	text-decoration: underline;
}

////////////////////////////////////////////////////////////////////////////////
// .content
////////////////////////////////////////////////////////////////////////////////
.content h2,
.content h3,
.content h4,
.content h5,
.content h6 {
	font-family: 'Amatic SC', cursive;
	margin-bottom: 15px;
}

////////////////////////////////////////////////////////////////////////////////
/* .recipes */
////////////////////////////////////////////////////////////////////////////////
.recipes {margin-bottom: 40px;}

.recipes .post {
	position: relative;
	list-style: none;
	border-bottom: 1px solid rgba(#979797, 1);
	margin-bottom: 35px;
}

.recipes .post:after {
	position: absolute;
	top: calc(100% - 5px);
	left: 50%;
	margin-left: -5px;
	content: " ";
	display: block;
	width: 10px;
	height: 10px;
	border: 1px solid rgba(#979797, 1);
	transform: rotate(45deg);
	background-color: rgba(#fff, 1);
}

.recipes .post:last-child {
	border-bottom: 0;
	margin: 0;
}

.recipes .post:last-child:after {display: none;}

.recipes .post h2 {
	font-size: 2em;
	margin-bottom: 10px;
}

.recipes .post h2 a {
	font-weight: bold;
	color: rgba(#4a4a4a, 1);
}

.recipes .post h2 a:hover {
	color: #85BB50;
	background-color: transparent;
}

.recipes .post .imgPreview {
	display: block;
	height: 250px;
	background-size: 100%;
	background-repeat: no-repeat;
	background-position: center center;
	margin-bottom: 20px;
}

.recipes .post .imgPreview  {background-color: transparent;}

.post .cta {
	padding-bottom: 25px;
	text-align: center;
}

.post .cta a {
	position: relative;
	display: inline-block;
	padding: 5px 10px;
	font-family: 'Amatic SC', cursive;
	font-size: 1.5em;
	color: #4a4a4a;
	border: 1px solid rgba(#b8e986, 0.5);
	background-color: rgba(#b8e986, 0.3);
	box-shadow: 0 2px 2px rgba(#4a4a4a, 0.5)
}

.post .cta a:hover {
	top: 1px;
	box-shadow: 0 2px 2px rgba(#4a4a4a, 0)
}

////////////////////////////////////////////////////////////////////////////////
// .about
////////////////////////////////////////////////////////////////////////////////
.about {margin-bottom: 40px;}
.about h2 {margin-bottom: 20px;}

.aboutContent {
	font-size: 1.4em;
	line-height: 1.2em;
	margin-bottom: 20px;
}

.aboutContent p {margin-bottom: 10px;}
.aboutContent p:last-child {margin-bottom: 0;}

.about .cta {text-align: center;}

.about .cta a {
	font-size: 1.6em;
	font-family: 'Amatic SC', cursive;
	text-transform: uppercase;
}

////////////////////////////////////////////////////////////////////////////////
// .postheader
////////////////////////////////////////////////////////////////////////////////
.postheader {margin-bottom: 20px;}

.postheader h2 {
	font-size: 2em;
	margin-bottom: 5px;
}

.postheader .postInfo {
	font-family: 'Amatic SC', cursive;
	font-size: 1.4em;
	font-weight: 200;
}

////////////////////////////////////////////////////////////////////////////////
// .postImage
////////////////////////////////////////////////////////////////////////////////
.postImage {
	display: block;
	margin-bottom: 20px;
}

.postImage img {display: block;}

////////////////////////////////////////////////////////////////////////////////
// .postIntro
////////////////////////////////////////////////////////////////////////////////
.postIntro {margin-bottom: 40px;}

.postIntro p {
  font-size: 1.6em;
  line-height: 1.4em;
}

.postIntro li {
  font-size: 1.4em;
  line-height: 1.4em;
  list-style-position: inside;
}

////////////////////////////////////////////////////////////////////////////////
// .postContent
////////////////////////////////////////////////////////////////////////////////
.postContent {margin-bottom: 20px;}

.postContent h2 {font-size: 2em;}
.postContent h3 {font-size: 1.8em;}
.postContent h4 {font-size: 1.6em;}
.postContent h5 {font-size: 1.4em;}
.postContent h6 {font-size: 1.2em;}

.postContent p {
  font-size: 1.5em;
  line-height: 1.4em;
  margin-bottom: 20px;
}

.postContent ul,
.postContent ol {margin-bottom: 20px;}

.postContent li {
	list-style-position: inside;
	font-size: 1.5em;
	line-height: 1.4em;
}

////////////////////////////////////////////////////////////////////////////////
// .recipeContent
////////////////////////////////////////////////////////////////////////////////
.recipeContent h3 {
	font-family: 'Amatic SC', cursive;
	font-size: 2em;
	margin-bottom: 20px;
}

.recipeContent ul,
.recipeContent ol {padding-left: 20px;}

.recipeContent li {
	font-size: 1.4em;
	line-height: 1.2em;
	margin-bottom: 10px;
}

////////////////////////////////////////////////////////////////////////////////
// .box
////////////////////////////////////////////////////////////////////////////////
.box {
	padding: 20px;
	border: 1px solid rgba(#979797, 1);
	border-radius: 3px;
	background-color: rgba(#d8d8d8, 0.2);
	margin-bottom: 30px;
}

////////////////////////////////////////////////////////////////////////////////
// .mainFooter
////////////////////////////////////////////////////////////////////////////////
.mainFooter {
	padding: 30px 0;
	border: 1px solid rgba(#979797, 1);
	border-right-width: 0;
	border-left-width: 0;
	margin-bottom: 30px;
}

.mainFooter p {
	font-size: 1.3em;
	font-family: 'Amatic SC', cursive;
	font-weight: 200;
	text-align: center;
}

.mainFooter p strong {
	font-size: 1.4em;
	text-transform: uppercase;
	font-weight: bol;
}

